@@ -1,5 +1,6 @@
 - Action parameters and callbacks can be passed in an object
 - Fix checking of XMLHttpRequest presence to work in both browser and nodejs
+- Tracking of blocking actions
 
 * Tue Oct 18 2016 - version 0.6.0
 - Client.availableVersions: fix callback arguments
